# biofood-recreated

backend/: pyproject.toml
backend/src/backend/: app.py  ioc.py  settings.py
backend/src/backend/adapters/: authorization.py  orders_channel.py
backend/src/backend/adapters/database/orm/: orm.py
backend/src/backend/application/common/: interactor.py  orders_channel.py
backend/src/backend/application/orders/: change_order_status.py  create_order.py  subscribe_to_all_orders.py  subscribe_to_orders_list.py
backend/src/backend/domain/: models.py
backend/src/backend/presentation/: exceptions.py  interactor_factory.py
backend/src/backend/presentation/endpoints/: orders.py
frontend/: eslint.config.js  package.json
frontend/src/: App.tsx
frontend/src/components/AddToCart/: index.tsx
frontend/src/components/Button/: index.tsx  story.tsx
frontend/src/components/Category/: index.tsx
frontend/src/components/DishInCart/: index.tsx  story.tsx
frontend/src/components/DishPreview/: index.tsx  story.tsx
frontend/src/components/Error/: index.tsx  story.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/LoadingIcon/: index.tsx
frontend/src/components/OrderStatus/: index.tsx  story.tsx
frontend/src/layouts/: main.tsx  pos.tsx
frontend/src/pages/: Account.tsx  Cart.tsx  Catalogue.tsx  Login.tsx  LoginDone.tsx  NotFound.tsx  OrderDone.tsx  StaffQrCode.tsx
frontend/src/pages/pos/: ChefKanban.tsx  (+1 more)
frontend/src/store/: auth.ts
infrastructure/: .env.example  compose-dev.yaml  compose.yaml
infrastructure/dumps/: biofood_client.sql
(+2 files in other folders)
